tests/fixtures/invalid/divmod_dict_bytes.py
# Cannot call divmod() with Dict[str, int], Bytes
x = divmod({"a": 1}, b"hello")
